--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
       SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
       GH_TOKEN: ${{ secrets.GH_TOKEN_REDALLEN }} # needs to be an admin token to get around branch protection
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      HUSKY: 0
     steps:
       - uses: actions/checkout@v2
         with:
