--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,5 +59,7 @@ jobs:
       - run: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
         name: Avoid Unknown Host for github.com
       - run: npx semantic-release@19.0.5
+        env:
+          HUSKY: 0
         name: Release to NPM
 
