chore(stylelint): update stylelint-order, add rule for vars before decs

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "access": "public"
   },
   "dependencies": {
+    "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard-scss": "^7.0.1"
   }
 }
