--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@fortawesome/fontawesome": "^1.1.8",
     "@octokit/rest": "^19.0.7",
-    "@patternfly/documentation-framework": "1.10.4",
+    "@patternfly/documentation-framework": "2.0.0-alpha.18",
     "@patternfly/patternfly-a11y": "4.3.1",
-    "@patternfly/react-code-editor": "4.82.115",
-    "@patternfly/react-core": "4.276.8",
-    "@patternfly/react-table": "4.113.0",
+    "@patternfly/react-code-editor": "5.0.0-alpha.54",
+    "@patternfly/react-core": "5.0.0-alpha.53",
+    "@patternfly/react-table": "5.0.0-alpha.54",
     "@starptech/prettyhtml": "^0.10.0",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^10.0.0",
@@ -94,7 +94,7 @@
   },
   "resolutions": {
     "@babel/preset-env": "7.18.2",
-    "monaco-editor": "0.21.3"
+    "monaco-editor": "0.34.1"
   },
   "repository": {
     "type": "git",
