feat(deps): introduce stylelint-use-logical-spec stylelint plugin
Add this new linter check when linting new code.

This enforces the usage of Logical Properties and Values in CSS.

More info @ https://www.npmjs.com/package/stylelint-use-logical-spec

Partially Fixes #5555

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:css": "gulp lintCSS",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:sass -- --fix",
     "lint:sass": "stylelint 'src/**/*.scss'",
+    "lint:sass-new": "stylelint 'src/**/*.scss' --config .stylelint_logical",
     "lint:js": "eslint .",
     "screenshots": "rimraf patternfly-docs/generated/**/*.png && pf-docs-framework screenshots --urlPrefix http://localhost:5000",
     "serve": "pf-docs-framework serve public",
@@ -87,6 +88,7 @@
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-use-logical-spec": "^5.0.0",
     "stylelint-value-no-unknown-custom-properties": "^4.0.0",
     "surge": "^0.23.1",
     "unified": "^10.1.2",
