fix(release): release from v4 branch

--- a/package.json
+++ b/package.json
@@ -92,8 +92,7 @@
     "url": "https://github.com/patternfly/patternfly.git"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "tag": "prerelease"
+    "registry": "https://registry.npmjs.org/"
   },
   "husky": {
     "hooks": {
