--- a/.github/ISSUE_TEMPLATE/devX_request.yml
+++ b/.github/ISSUE_TEMPLATE/devX_request.yml
@@ -3,7 +3,7 @@ name: Developer experience
 about: Suggest an enhancement to the developer experience (DX). DX enhancements improve experience for those building UIs with PatternFly, but have little to know end user impact.
 title: "[short description]"
 labels: DevX
-assignees: ''
+assignees: ""
 
 ---
 **Describe the enhancement or change**
