chore: Update npm release channel for main branch

--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "tag": "alpha",
+    "tag": "prerelease",
     "access": "public"
   }
 }
