--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build for promotion
-        run: yarn install --frozen-lockfile && yarn build
+        run: yarn install --frozen-lockfile && yarn build-patternfly
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
