--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -25,7 +25,8 @@ jobs:
           echo "Tag name from github.ref_name: ${{  github.ref_name }}"
       - name: Manual publish
         run: |
-          ls
           cd dist
           npm version ${{ github.ref_name }} --git-tag-version false
-          npm publish --tag=latest
+          npm publish --tag=latest --dry-run
+        env:
+          HUSKY: 0
