--- a/package.json
+++ b/package.json
@@ -29,39 +29,39 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/eslint-parser": "^7.19.1",
+    "@babel/core": "^7.22.9",
+    "@babel/eslint-parser": "^7.22.9",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.20.5",
-    "@babel/plugin-transform-react-jsx": "^7.20.13",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@fortawesome/fontawesome": "^1.1.8",
-    "@octokit/rest": "^19.0.7",
-    "@patternfly/documentation-framework": "5.0.7",
+    "@octokit/rest": "^20.0.1",
+    "@patternfly/documentation-framework": "5.0.18",
     "@patternfly/patternfly-a11y": "4.3.1",
-    "@patternfly/react-code-editor": "5.0.0-alpha.116",
-    "@patternfly/react-core": "5.0.0-alpha.115",
-    "@patternfly/react-table": "5.0.0-alpha.117",
+    "@patternfly/react-code-editor": "5.0.0",
+    "@patternfly/react-core": "5.0.0",
+    "@patternfly/react-table": "5.0.0",
     "@starptech/prettyhtml": "^0.10.0",
     "cheerio": "^1.0.0-rc.12",
-    "commander": "^10.0.0",
-    "cssnano": "^5.1.14",
-    "eslint": "^8.33.0",
-    "eslint-config-standard": "^17.0.0",
+    "commander": "^11.0.0",
+    "cssnano": "^6.0.1",
+    "eslint": "^8.46.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-jsx": "^11.0.0",
     "eslint-config-standard-react": "^13.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "glob": "^8.1.0",
+    "glob": "^10.3.3",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-iconfont": "^11.0.1",
@@ -70,27 +70,27 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.1",
+    "lint-staged": "^13.2.3",
     "node-plop": "^0.31.1",
-    "postcss": "^8.4.21",
-    "postcss-css-variables": "^0.18.0",
-    "postcss-preset-env": "^8.0.1",
-    "prettier": "^2.8.4",
+    "postcss": "^8.4.27",
+    "postcss-css-variables": "^0.19.0",
+    "postcss-preset-env": "^9.1.0",
+    "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remark-parse": "^10.0.1",
-    "remark-stringify": "^10.0.2",
+    "remark-parse": "^10.0.2",
+    "remark-stringify": "^10.0.3",
     "rimraf": "*",
-    "sass": "^1.58.3",
+    "sass": "^1.64.2",
     "sass-graph": "^4.0.1",
-    "stylelint": "^15.2.0",
-    "stylelint-config-recess-order": "^4.0.0",
-    "stylelint-config-standard": "^30.0.1",
-    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint": "^15.10.2",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^10.0.0",
     "stylelint-value-no-unknown-custom-properties": "^4.0.0",
     "surge": "^0.23.1",
     "unified": "^10.1.2",
-    "webpack": "^5.75.0"
+    "webpack": "^5.88.2"
   },
   "resolutions": {
     "@babel/preset-env": "7.18.2",
