feat(breaker): bump this version to 6.0
BREAKING CHANGE: 6.0.0-alpha.0

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "access": "public"
+    "access": "public",
+    "tag": "alpha"
   }
 }
