--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "access": "public"
+    "access": "public",
+    "tag": "alpha"
   }
 }
