chore: added backstop as dev dependency

--- a/package.json
+++ b/package.json
@@ -106,5 +106,8 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
+  },
+  "dependencies": {
+    "backstopjs": "^6.2.2"
   }
 }
