--- a/package.json
+++ b/package.json
@@ -106,7 +106,6 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "access": "public",
-    "tag": "alpha"
+    "access": "public"
   }
 }
