--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@commitlint/config-conventional": "^17.6.7",
     "@fortawesome/fontawesome": "^1.1.8",
     "@octokit/rest": "^20.0.1",
-    "@patternfly/documentation-framework": "5.3.0",
+    "@patternfly/documentation-framework": "5.2.26",
     "@patternfly/patternfly-a11y": "4.3.1",
     "@patternfly/react-code-editor": "5.1.1",
     "@patternfly/react-core": "5.1.1",
@@ -106,7 +106,6 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "access": "public",
-    "tag": "alpha"
+    "access": "public"
   }
 }
