--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -9,6 +9,8 @@ jobs:
       SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
       GH_PR_TOKEN: ${{ secrets.GH_PR_TOKEN }}
       GH_PR_NUM:   ${{ github.event.number }}
+      PUPPETEER_SKIP_DOWNLOAD: true
+      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
     steps:
       - uses: actions/checkout@v2
       # Yes, we really want to checkout the PR
