--- a/.stylelintrc
+++ b/.stylelintrc
@@ -39,7 +39,7 @@
         "stylelint-commands"
       ]
     }],
-    "custom-property-pattern": "^pf-(v5|t-)-(color|global|[lcud])-.+$",
+    "custom-property-pattern": "^pf-(v5|t-)-(color|global|chart|[lcud])-.+$",
     "declaration-block-no-redundant-longhand-properties": null,
     "declaration-no-important": true,
     "declaration-property-value-disallowed-list": {
