chore(screenshots): update visual regression screenshots, config

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "a11y": "patternfly-a11y --config patternfly-a11y.config",
+    "backstop:clean": "rimraf -- backstop_data/bitmaps_test backstop_data/html_report",
     "backstop:test": "backstop test --config='backstop.js'",
     "backstop:approve": "backstop approve --config='backstop.js'",
     "build-patternfly": "gulp buildPatternfly",
