chore(build): remove gulp lintCSS, add stylelint rule for css comments

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "dev": "gulp develop",
     "develop": "gulp develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write src/**/*.js",
-    "lint": "npm run lint:css && npm run lint:sass && npm run lint:js",
+    "lint": "npm run lint:sass && npm run lint:js",
     "lint:size": "node .circleci/css-size-report/sizeReport run",
-    "lint:css": "gulp lintCSS",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:sass -- --fix",
     "lint:sass": "stylelint 'src/**/*.scss'",
     "lint:js": "eslint .",
