feat(docs): added new cli commands for dark theme testing

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "a11y": "patternfly-a11y --config patternfly-a11y.config",
     "backstop:clean": "rimraf -- backstop_data/bitmaps_test backstop_data/html_report",
     "backstop:test": "backstop test --config='backstop.js'",
+    "backstop:test:dark": "backstop test --config='backstop.js' --dark",
     "backstop:approve": "backstop approve --config='backstop.js'",
+    "backstop:approve:dark": "backstop approve --config='backstop.js' --dark",
     "build-patternfly": "gulp buildPatternfly",
     "build": "gulp build",
     "build:docs": "gulp buildWebpack",
