--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -10,10 +10,8 @@ jobs:
       - uses: actions/stale@v9
         with:
           days-before-stale: 60
-          days-before-close: 30
+          days-before-close: -1
           exempt-issue-labels: 'accessibility,breaking change,design approved,pinned'
-          stale-issue-label: 'wontfix'
-          stale-issue-message: 'This issue has been automatically marked as stale because it has not had activity in the last 60 days. It will be closed in 30 days if no further activity occurs.'
-          stale-pr-message: 'This PR has been automatically marked as stale because it has not had activity in the last 60 days. It will be closed in 30 days if no further activity occurs.'
-          close-issue-message: 'This issue has been closed because it has not had activity since being marked as stale.'
-          close-pr-message: 'This PR has been closed because it has not had activity since being marked as stale.'
+          stale-issue-label: 'stale'
+          stale-issue-message: 'This issue has been automatically marked as stale because it has not had activity in the last 60 days.'
+          stale-pr-message: 'This PR has been automatically marked as stale because it has not had activity in the last 60 days.'
