--- a/package.json
+++ b/package.json
@@ -109,5 +109,6 @@
     "registry": "https://registry.npmjs.org/",
     "access": "public",
     "tag": "alpha"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
