--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@patternfly/react-table": "6.0.0-prerelease.19",
     "@starptech/prettyhtml": "^0.10.0",
     "backstopjs": "^6.3.23",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
     "commander": "^12.0.0",
     "cssnano": "^6.1.2",
     "eslint": "^8.57.0",
@@ -87,7 +87,7 @@
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
     "rimraf": "*",
-    "sass": "^1.74.1",
+    "sass": "^1.80.1",
     "stylelint": "^16.3.1",
     "stylelint-config-recess-order": "^5.0.0",
     "stylelint-config-standard": "^36.0.0",
@@ -109,5 +109,8 @@
     "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "dependencies": {
+    "@babel/helper-hoist-variables": "^7.24.7"
+  }
 }
