--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -12,12 +12,12 @@ jobs:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Build for promotion
         run: yarn install --frozen-lockfile && yarn build
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version: '20'
           registry-url: 'https://registry.npmjs.org'
       - name: GitHub Tag Name example
         run: |
