--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           days-before-stale: 60
           days-before-close: -1
-          exempt-issue-labels: 'accessibility,breaking change,design approved,pinned'
+          exempt-issue-labels: 'breaking change,pinned'
           stale-issue-label: 'stale'
           stale-issue-message: 'This issue has been automatically marked as stale because it has not had activity in the last 60 days.'
           stale-pr-message: 'This PR has been automatically marked as stale because it has not had activity in the last 60 days.'
