--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@patternfly/patternfly",
   "description": "Assets, source, tooling, and content for PatternFly 4",
-  "version": "0.0.0-development",
+  "version": "6.2.1",
   "keywords": [],
   "license": "MIT",
   "scripts": {
