--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -18,7 +18,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - uses: actions/checkout@v4
       - name: Build for promotion
-        run: yarn install --frozen-lockfile && yarn build
+        run: yarn install --immutable && yarn build
       - name: GitHub Tag Name example
         run: |
           echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
