chore(deps): update yarn (#7759)
* chore(deps): update yarn

* chore(deps): update --frozen-lockfile flag to --immutable

* chore(ci): enable corepack in CI

* chore(deps): update lock file

--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -33,7 +33,11 @@ jobs:
       #  with:
       #    path: '**/node_modules'
       #    key: ${{ runner.os }}-yarn-14-${{ hashFiles('yarn.lock') }}
-      - run: yarn install --frozen-lockfile
+
+      - name: Enable Corepack
+        shell: bash
+        run: corepack enable
+      - run: yarn install --immutable
         # if: steps.yarn-cache.outputs.cache-hit != 'true'
       - run: yarn lint:sass
         name: Lint SASS
