--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,14 +20,38 @@ jobs:
       # Injected by generate-workflows.js
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.18.3'
-      # - uses: actions/cache@v4
-      #   id: yarn-cache
-      #   name: Load npm deps from cache
-      #   with:
-      #     path: '**/node_modules'
-      #     key: ${{ runner.os }}-yarn-14-${{ hashFiles('yarn.lock') }}
-      - run: yarn install --frozen-lockfile
+          node-version: '22.17.1'
+          check-latest: true
+      
+      - name: Enable Corepack
+        shell: bash
+        run: corepack enable
+      
+      - name: Get Yarn configuration
+        id: yarn-config
+        shell: bash
+        run: |
+          echo "cache-directory=$(yarn cache dir)" >> $GITHUB_OUTPUT
+          echo "cache-folder=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+      
+      # TODO: This can be simplified to use the `cache` option of the `actions/setup-node` action when it supports Corepack.
+      # See: https://github.com/actions/setup-node/issues/531
+      - uses: actions/cache@v4
+        id: yarn-cache
+        name: Load Yarn cache
+        with:
+          # Also cache Cypress binary.
+          path: |
+            ~/.cache/Cypress
+            ${{ steps.yarn-config.outputs.cache-directory }}
+            ${{ steps.yarn-config.outputs.cache-folder }}
+          key: ${{ runner.os }}-yarn-cache-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-cache-
+      
+      - name: Install dependencies
+        shell: bash
+        run: yarn install --immutable
         # if: steps.yarn-cache.outputs.cache-hit != 'true'
       - run: yarn lint:sass
         name: Lint SASS
