--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 npm-debug.log
 yarn-error.log
 package-lock.json
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 /.idea
 /coverage/
 *.swp
