--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "license": "MIT",
   "engines": {
-    "node": ">=22.17.1"
+    "node": ">=20.18.3 <22"
   },
   "scripts": {
     "a11y": "patternfly-a11y --config patternfly-a11y.config",
