--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,32 +27,22 @@ jobs:
         shell: bash
         run: corepack enable
       
-      - name: Get Yarn configuration
-        id: yarn-config
-        shell: bash
-        run: |
-          echo "cache-directory=$(yarn cache dir)" >> $GITHUB_OUTPUT
-          echo "cache-folder=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-      
-      # TODO: This can be simplified to use the `cache` option of the `actions/setup-node` action when it supports Corepack.
-      # See: https://github.com/actions/setup-node/issues/531
       - uses: actions/cache@v4
         id: yarn-cache
         name: Load Yarn cache
         with:
-          # Also cache Cypress binary.
+          # Cache Yarn and Cypress binaries
           path: |
             ~/.cache/Cypress
-            ${{ steps.yarn-config.outputs.cache-directory }}
-            ${{ steps.yarn-config.outputs.cache-folder }}
+            ~/.cache/yarn
+            .yarn/cache
           key: ${{ runner.os }}-yarn-cache-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-cache-
       
       - name: Install dependencies
         shell: bash
-        run: yarn install --immutable
-        # if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install --immutable --network-timeout 100000
       - run: yarn lint:sass
         name: Lint SASS
         if: always()
@@ -85,4 +75,3 @@ jobs:
         env:
           HUSKY: 0
         name: Release to NPM
-
