--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
   },
   "resolutions": {
     "@babel/preset-env": "7.18.2",
-    "monaco-editor": "0.34.1"
+    "monaco-editor": "0.34.1",
+    "on-headers": "~1.1.0"
   },
   "repository": {
     "type": "git",
