--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -17,10 +17,10 @@ jobs:
           git checkout tmp
 
       - run: |
-          git rev-parse origin/high-contrast-q3
+          git rev-parse origin/main
           git rev-parse HEAD
-          git rev-parse origin/high-contrast-q3..HEAD
-          git log origin/high-contrast-q3..HEAD --format="%b"
+          git rev-parse origin/main..HEAD
+          git log origin/main..HEAD --format="%b"
 
       # Yes, we really want to checkout the PR
       # Injected by generate-workflows.js
