--- a/package.json
+++ b/package.json
@@ -38,68 +38,68 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/eslint-parser": "^7.24.1",
+    "@babel/core": "^7.28.4",
+    "@babel/eslint-parser": "^7.28.4",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-react-jsx": "^7.23.4",
-    "@babel/preset-env": "^7.24.4",
-    "@babel/preset-react": "^7.24.1",
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@fortawesome/fontawesome": "^1.1.8",
-    "@octokit/rest": "^20.1.0",
+    "@octokit/rest": "^22.0.0",
     "@patternfly/documentation-framework": "6.22.8",
     "@patternfly/patternfly-a11y": "5.1.0",
     "@patternfly/react-code-editor": "6.3.1",
     "@patternfly/react-core": "6.3.1",
     "@patternfly/react-table": "6.3.1",
     "@starptech/prettyhtml": "^0.10.0",
-    "backstopjs": "^6.3.23",
-    "cheerio": "^1.0.0-rc.12",
-    "commander": "^12.0.0",
-    "cssnano": "^6.1.2",
-    "eslint": "^8.57.0",
+    "backstopjs": "^6.3.25",
+    "cheerio": "^1.1.2",
+    "commander": "^14.0.1",
+    "cssnano": "^7.1.1",
+    "eslint": "^9.36.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-jsx": "^11.0.0",
     "eslint-config-standard-react": "^13.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^17.23.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "glob": "^10.3.12",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "glob": "^11.0.3",
     "gulp": "^5.0.1",
     "gulp-cli": "^3.1.0",
-    "gulp-iconfont": "^11.0.1",
+    "gulp-iconfont": "^12.0.0",
     "gulp-iconfont-css": "^3.0.0",
     "gulp-postcss": "^10.0.0",
-    "gulp-rename": "^2.0.0",
+    "gulp-rename": "^2.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "node-plop": "^0.32.0",
-    "postcss": "^8.4.38",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.0",
+    "node-plop": "^0.32.2",
+    "postcss": "^8.5.6",
     "postcss-css-variables": "^0.19.0",
-    "postcss-preset-env": "^9.5.4",
-    "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "postcss-preset-env": "^10.4.0",
+    "prettier": "^3.6.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
     "rimraf": "*",
-    "sass": "^1.74.1",
-    "stylelint": "^16.3.1",
-    "stylelint-config-recess-order": "^5.0.0",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-config-standard-scss": "^13.1.0",
+    "sass": "^1.93.2",
+    "stylelint": "^16.24.0",
+    "stylelint-config-recess-order": "^7.3.0",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-config-standard-scss": "^16.0.0",
     "stylelint-use-logical-spec": "^5.0.1",
-    "surge": "^0.23.1",
-    "unified": "^11.0.4",
-    "webpack": "^5.91.0"
+    "surge": "^0.24.6",
+    "unified": "^11.0.5",
+    "webpack": "^5.101.3"
   },
   "resolutions": {
     "@babel/preset-env": "7.18.2",
