--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "postcss-css-variables": "^0.19.0",
     "postcss-preset-env": "^10.4.0",
     "prettier": "^3.6.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
     "rimraf": "*",
@@ -96,6 +96,7 @@
     "stylelint-config-recess-order": "^7.3.0",
     "stylelint-config-standard": "^39.0.0",
     "stylelint-config-standard-scss": "^16.0.0",
+    "stylelint-order": "^7.0.0",
     "stylelint-use-logical-spec": "^5.0.1",
     "surge": "^0.24.6",
     "unified": "^11.0.5",
