--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/eslint-parser": "^7.24.1",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-class-properties": "^7.24.4",
+    "@babel/plugin-transform-optional-chaining": "^7.24.4",
+    "@babel/plugin-transform-private-methods": "^7.24.4",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.4",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
@@ -54,7 +54,7 @@
     "@patternfly/react-core": "6.4.0",
     "@patternfly/react-table": "6.4.0",
     "@starptech/prettyhtml": "^0.10.0",
-    "backstopjs": "^6.3.23",
+    "backstopjs": "^6.3.25",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^12.0.0",
     "cssnano": "^6.1.2",
@@ -71,7 +71,7 @@
     "glob": "^10.3.12",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "gulp-iconfont": "^11.0.1",
+    "gulp-iconfont": "^12.0.0",
     "gulp-iconfont-css": "^3.0.0",
     "gulp-postcss": "^10.0.0",
     "gulp-rename": "^2.0.0",
@@ -87,21 +87,33 @@
     "react-dom": "^18.2.0",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
-    "rimraf": "*",
+    "rimraf": "^6.0.1",
     "sass": "^1.74.1",
     "stylelint": "^16.3.1",
     "stylelint-config-recess-order": "^5.0.0",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-use-logical-spec": "^5.0.1",
-    "surge": "^0.23.1",
+    "surge": "^0.24.6",
     "unified": "^11.0.4",
     "webpack": "^5.91.0"
   },
   "resolutions": {
     "@babel/preset-env": "7.18.2",
     "monaco-editor": "0.34.1",
-    "on-headers": "~1.1.0"
+    "on-headers": "~1.1.0",
+    "form-data": "^4.0.4",
+    "minimist": "^1.2.8",
+    "tar-fs": "^3.1.1",
+    "axios": "^1.13.1",
+    "body-parser": "^2.2.0",
+    "ws": "^8.18.0",
+    "follow-redirects": "^1.15.11",
+    "express": "^4.21.2",
+    "parse-git-config": "^3.0.0",
+    "braces": "^3.0.3",
+    "ip": "^2.0.1",
+    "request": "^2.88.2"
   },
   "repository": {
     "type": "git",
