--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "@patternfly/react-code-editor": "6.4.0",
     "@patternfly/react-core": "6.4.0",
     "@patternfly/react-table": "6.4.0",
+    "@rspack/cli": "^1.6.0",
+    "@rspack/core": "^1.6.0",
+    "@rspack/dev-server": "^1.1.4",
     "@starptech/prettyhtml": "^0.10.0",
     "backstopjs": "^6.3.25",
     "cheerio": "^1.0.0-rc.12",
