--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,16 +59,16 @@ jobs:
           key: ${{ runner.os }}-v4-${{ hashFiles('yarn.lock') }}
       - run: yarn build:docs
         name: Build docs
-      # - run: node .github/upload-preview.js public
-      #   name: Upload docs
-      #   if: always()
-      # - name: Install Chrome for Puppeteer
-      #   run: npx puppeteer browsers install chrome
-      # - run: yarn serve & yarn test
-      #   name: a11y tests
-      # - run: node .github/upload-preview.js coverage
-      #   name: Upload a11y report
-      #   if: always()
+      - run: node .github/upload-preview.js public
+        name: Upload docs
+        if: always()
+      - name: Install Chrome for Puppeteer
+        run: npx puppeteer browsers install chrome
+      - run: yarn serve & yarn test
+        name: a11y tests
+      - run: node .github/upload-preview.js coverage
+        name: Upload a11y report
+        if: always()
       - run: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
         name: Avoid Unknown Host for github.com
       - run: npx semantic-release@19.0.5
